Add proto to csv displayer

--- a/static/website/index.html
+++ b/static/website/index.html
@@ -19,5 +19,16 @@
         <h2>Interests</h2>
         <p id="interests"></p>
     </div>
+
+    <hr>
+
+    <!-- Education Experience Table -->
+    <table id="educationTable"></table>
+
+    <hr>
+
+    <!-- Professional Experience Table -->
+    <table id="professionalTable"></table>
+
 </body>
 </html>
