--- a/static/website/index.html
+++ b/static/website/index.html
@@ -10,6 +10,16 @@
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
+
+    <!-- Add anchor tags to the navigation bar -->
+    <nav>
+        <a href="#personal-info">Personal Information</a>
+        <a href="#educationTable">Education Experience</a>
+        <a href="#professionalTable">Professional Experience</a>
+        <a href="#alumniTable">Alumni</a>
+    </nav>
+
+
     <!-- Personal Information Div -->
     <div id="personal-info">
         <h1 id="name"></h1>
@@ -18,17 +28,25 @@
         <p id="biography"></p>
         <h2>Interests</h2>
         <p id="interests"></p>
+        <h2>Awards</h2>
+        <table id="awardsTable"></table>
     </div>
 
     <hr>
 
+    <h2>Education Experience</h2>
     <!-- Education Experience Table -->
     <table id="educationTable"></table>
 
-    <hr>
-
+    <h2>Professional Experience</h2>
     <!-- Professional Experience Table -->
     <table id="professionalTable"></table>
+
+    <hr>
+
+    <h2>Alumni</h2>
+    <!-- Alumni Table -->
+    <table id="alumniTable"></table>
 
 </body>
 </html>
