Change mainpage html structure

--- a/website/index.html
+++ b/website/index.html
@@ -14,9 +14,8 @@
     <!-- Add anchor tags to the navigation bar -->
     <nav>
         <a href="#personal-info">Personal Information</a>
-        <a href="#educationTable">Education Experience</a>
-        <a href="#professionalTable">Professional Experience</a>
-        <a href="#alumniTable">Alumni</a>
+        <a href="#professional-table">Professional Experience</a>
+        <a href="#alumni-table">Alumni</a>
     </nav>
 
 
@@ -50,25 +49,22 @@
     <hr>
 
     <section>
-        <h2>Talks</h2>
-        <!-- Talks Table -->
-        <table id="talks-table"></table>
+        <h2>Talks</h2>        
+        <div id="talks"></div>
     </section>
 
     <hr>
 
     <section>
         <h2>Publications</h2>
-        <!-- Publications Table -->
-        <table id="publications-table"></table>
+        <div id="publications"></div>
     </section>
 
     <hr>
 
     <section>
         <h2>Preprints</h2>
-        <!-- Preprints Table -->
-        <table id="preprints-table"></table>
+        <div id="preprints"></div>
     </section>
 
     <hr>
