--- a/website/article.html
+++ b/website/article.html
@@ -12,10 +12,10 @@
 <body>
 
     <h2 id="title"></h2>
-    <p><strong>Autores:</strong> <span id="author"></span></p>
-    <p><strong>Publicado em:</strong> <span id="journal"></span></p>
-    <p><strong>Resumo:</strong> <span id="abstract"></span></p>
-    <a id="readMore" target="_blank">Ler o Artigo Completo</a>
+    <p><strong>Authors:</strong> <span id="author"></span></p>
+    <p><strong>Published in:</strong> <span id="journal"></span></p>
+    <p><strong>Abstract:</strong> <span id="abstract"></span></p>
+    <a id="readMore" target="_blank">Full Paper</a>
 
 </body>
 </html>
