--- a/website/index.html
+++ b/website/index.html
@@ -4,77 +4,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <title>CV</title>
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <!-- <link rel="icon" href="ico.ico" sizes="16x16" type="image/png"> -->    
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
 
-    <!-- Add anchor tags to the navigation bar -->
+    <!-- Navigation Bar with Anchors to Sections -->
     <nav>
-        <a href="#personal-info">Personal Information</a>
-        <a href="#professional-table">Professional Experience</a>
-        <a href="#alumni-table">Alumni</a>
+        <ul class="navbar">
+            <li><a href="#personal-info">Personal Information</a></li>
+            <li><a href="#professional-experience">Professional Experience</a></li>
+            <li><a href="#talks">Talks</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#preprints">Preprints</a></li>
+            <li><a href="#alumni">Alumni</a></li>
+        </ul>
     </nav>
 
+    <main>
+        <!-- Personal Information Section -->
+        <section id="personal-info">
+            <h1 id="name">Loading...</h1>
+            <h3 id="title"></h3>
+            <article>
+                <h2>Biography</h2>
+                <p id="biography"></p>
+            </article>
+            <article>
+                <h2>Interests</h2>
+                <ul id="interests"></ul>
+            </article>
+            <article>
+                <h2>Awards</h2>
+                <table id="awards-table"></table>
+            </article>
+            <article>
+                <h2>Education</h2>
+                <table id="education-table"></table>
+            </article>
+        </section>
 
-    <!-- Personal Information Section -->
-    <section id="personal-info">
-        <h1 id="name"></h1>
-        <h3 id="title"></h3>
-        <h2>Biography</h2>
-        <p id="biography"></p>
-        <h2>Interests</h2>
-        <p id="interests"></p>
-        <div>
-            <h2>Awards</h2>
-            <table id="awards-table"></table>
-        </div>
-        <div>
-            <h2>Education Experience</h2>
-            <!-- Education Experience Table -->
-            <table id="education-table"></table>
-        </div>
-    </section>
+        <hr>
 
-    <hr>
+        <!-- Professional Experience Section -->
+        <section id="professional-experience">
+            <h2>Professional Experience</h2>
+            <table id="professional-table"></table>
+        </section>
 
-    <section>
-        <h2>Professional Experience</h2>
-        <!-- Professional Experience Table -->
-        <table id="professional-table"></table>
-    </section>
+        <hr>
 
-    <hr>
+        <!-- Talks Section -->
+        <section id="talks">
+            <h2>Talks</h2>
+            <div id="talks-container">Loading talks...</div>
+            <a href="search_page.html?type=talks">View More</a>
+        </section>
 
-    <section>
-        <h2>Talks</h2>        
-        <div id="talks"></div>
-    </section>
+        <hr>
 
-    <hr>
+        <!-- Publications Section -->
+        <section id="publications">
+            <h2>Publications</h2>
+            <div id="publications-container">Loading publications...</div>
+            <a href="search_page.html?type=publications">View More</a>
+        </section>
 
-    <section>
-        <h2>Publications</h2>
-        <div id="publications"></div>
-    </section>
+        <hr>
 
-    <hr>
+        <!-- Preprints Section -->
+        <section id="preprints">
+            <h2>Preprints</h2>
+            <div id="preprints-container">Loading preprints...</div>
+            <a href="search_page.html?type=preprints">View More</a>
+        </section>
 
-    <section>
-        <h2>Preprints</h2>
-        <div id="preprints"></div>
-    </section>
+        <hr>
 
-    <hr>
-
-    <section>
-        <h2>Alumni</h2>
-        <!-- Alumni Table -->
-        <table id="alumni-table"></table>
-    </section>
-
+        <!-- Alumni Section -->
+        <section id="alumni">
+            <h2>Alumni</h2>
+            <table id="alumni-table"></table>
+        </section>
+    </main>
 
 </body>
 </html>
