Rename content fields to container

--- a/website/index.html
+++ b/website/index.html
@@ -129,7 +129,7 @@
         <section id="talks-section">
             <h2>Talks</h2>
 
-            <div id="talks-content">
+            <div id="talks-container">
                 <ul id="talks-list"></ul>
                 <a id="see-all-talks" href="search_page.html?type=talks" target="_blank">SEE ALL TALKS ></a>
             </div>
@@ -139,7 +139,7 @@
         <section id="publications-section">
             <h2>Publications</h2>
 
-            <div id="publications-content">
+            <div id="publications-container">
                 <ul id="publications-list"></ul>
                 <a id="see-all-publications" href="search_page.html?type=publications" target="_blank">SEE ALL PUBLICATIONS ></a>
             </div>
@@ -149,7 +149,7 @@
         <section id="preprints-section">
             <h2>Preprints</h2>
 
-            <div id="preprints-content">
+            <div id="preprints-container">
                 <ul id="preprints-list"></ul>
                 <a id="see-all-preprints" href="search_page.html?type=preprints" target="_blank">SEE ALL PREPRINTS ></a>
         </section>
@@ -170,7 +170,7 @@
         <section id="contact-section">
             <h2>Contact</h2>
 
-            <div id="contact-content">
+            <div id="contact-container">
                 <p id="contact-email"></p>
                 <p id="contact-address"></p>
                 <div id="contact-map"></div>
