--- a/website/index.html
+++ b/website/index.html
@@ -105,6 +105,7 @@
             <div id="personal-info-right">
                 <div id="biography">
                     <h2>Biography</h2>
+                    <p id="biography-text"></p>
                 </div>
 
                 <div id="interests">
@@ -114,7 +115,7 @@
 
                 <div id="education">
                     <h3>Education</h3>
-                    <div id="education--list"></div>
+                    <div id="education-list"></div>
                 </div>
             </div>
         </section>
