--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
     <script type="module" src="js/main.js"></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="ico.ico" sizes="16x16" type="image/png">
+    <link rel="icon" href="favicon.ico" sizes="16x16" type="image/png">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
     <header>
         <!-- Navigation Bar with Anchors to Sections -->
         <nav>
-            <p>Rodrigo S. Targino</p>
+            <p class="bold">Rodrigo S. Targino</p>
 
             <a href="#personal-info-section">Home</a>
             <a href="#professional-experience-section">Experience</a>
@@ -64,7 +64,9 @@
         <!-- Personal Information Section -->
         <section id="personal-info-section">
             <div id="personal-info-left">
-                <img id="personal-picture" src="..\static\images\profile_picture.jpg" alt="Photo of Rodrigo S. Targino">
+                <div id="personal-picture-container">
+                    <img id="personal-picture" src="..\static\images\profile_picture.jpg" alt="Photo of Rodrigo S. Targino">
+                </div>
                 <h1 id="name"></h1>
                 <h3 id="title"></h3>
 
