Add details pop-up

--- a/website/index.html
+++ b/website/index.html
@@ -180,6 +180,13 @@
             </div>
         </section>
 
+        <div id="articleModal" class="modal">
+            <div class="modal-content">
+                <span id="closeModal" class="close">&times;</span>
+                <div id="modalContent"></div>
+            </div>
+        </div>
+
     </main>
 
 </body>
