Implement the "cite" button

--- a/website/index.html
+++ b/website/index.html
@@ -187,6 +187,13 @@
             </div>
         </div>
 
+        <div id="citeModal" class="modal">
+            <div class="modal-content">
+                <span id="closeCiteModal" class="close">&times;</span>
+                <div id="citeModalContent"></div>
+            </div>
+        </div>
+
     </main>
 
 </body>
