Update file paths of index page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script type="module" src="website/js/main.js"></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="../static/images/favicon.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="./static/images/favicon.png" sizes="16x16" type="image/png">
 </head>
 
 <body>
@@ -81,7 +81,7 @@
         <section id="personal-info-section">
             <div id="personal-info-left">
                 <div id="personal-picture-container">
-                    <img id="personal-picture" src="..\static\images\profile_picture.jpg" alt="Photo of Rodrigo S. Targino">
+                    <img id="personal-picture" src=".\static\images\profile_picture.jpg" alt="Photo of Rodrigo S. Targino">
                 </div>
                 <h1 id="name" class="white-text"></h1>
                 <h3 id="title" class="semi-bold grey-text"></h3>
@@ -194,6 +194,7 @@
             <div class="table-container">
                 <table id="teaching-table"></table>
             </div>
+            <p class="no-margin grey-text">(*) Second supervisor.</p>
         </section>
 
         <!-- Contact Section -->
