--- a/search_page.html
+++ b/search_page.html
@@ -12,27 +12,33 @@
           integrity="sha256-FMvZuGapsJLjouA6k7Eo2lusoAX9i0ShlWFG6qt7SLc=" 
           crossorigin="anonymous">
 
-          
-    <link rel="stylesheet" href="css/styles.css">
-    <script type="module" src="js/search_page.js"></script>
+
+    <!-- Local Stylesheet -->
+    <link rel="stylesheet" href="website/css/styles.css">
+
+    <!-- Local JavaScript -->
+    <script type="module" src="website/js/main.js"></script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="./static/images/favicon.png" sizes="16x16" type="image/png">
 </head>
 <body>
     <header>
         <!-- Navigation Bar with Anchors to Sections -->
         <nav>
-            <a href="..\index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
+            <a href="./index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
 
-            <a href="..\index.html#professional-experience-section">Experience</a>
-            <a href="..\index.html#personal-info-section">Home</a>
-            <a href="..\index.html#talks-section">Talks</a>
-            <a href="..\index.html#publications-section">Publications</a>
-            <a href="..\index.html#preprints-section">Preprints</a>
-            <a href="..\index.html#students-section">Students</a>
-            <a href="..\index.html#teaching-section">Teaching</a>
-            <a href="..\index.html#contact-section">Contact</a>
-            <a href="..\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
+            <a href="#personal-info-section">Home</a>
+            <a href="#professional-experience-section">Experience</a>
+            <a href="#talks-section">Talks</a>
+            <a href="#publications-section">Publications</a>
+            <a href="#preprints-section">Preprints</a>
+            <a href="#students-section">Students</a>
+            <a href="#teaching-section">Teaching</a>
+            <a href="#contact-section">Contact</a>
+            <a href=".\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
 
-            <a id="search-button" href=".\search_page.html">
+            <a id="search-button" href=".\website\search_page.html">
                 <i class="fas fa-search"></i>
             </a>
 
