--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <header>
         <!-- Navigation Bar with Anchors to Sections -->
         <nav>
-            <a href="./index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
+            <a href=".\index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
 
-            <a href="#personal-info-section">Home</a>
+            <a href="#">Home</a>
             <a href="#professional-experience-section">Experience</a>
             <a href="#talks-section">Talks</a>
             <a href="#publications-section">Publications</a>
@@ -64,7 +64,7 @@
             <a href="#contact-section">Contact</a>
             <a href=".\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
 
-            <a id="search-button" href=".\website\search_page.html">
+            <a id="search-button" href=".\search_page.html">
                 <i class="fas fa-search"></i>
             </a>
 
