--- a/search_page.html
+++ b/search_page.html
@@ -26,20 +26,20 @@
     <header>
         <!-- Navigation Bar with Anchors to Sections -->
         <nav>
-            <a href="./index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
+            <a href=".\index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
 
-            <a href="#personal-info-section">Home</a>
-            <a href="#professional-experience-section">Experience</a>
-            <a href="#talks-section">Talks</a>
-            <a href="#publications-section">Publications</a>
-            <a href="#preprints-section">Preprints</a>
-            <a href="#students-section">Students</a>
-            <a href="#teaching-section">Teaching</a>
-            <a href="#contact-section">Contact</a>
+            <a href=".\index.html#">Experience</a>
+            <a href=".\index.html#personal-info-section">Home</a>
+            <a href=".\index.html#talks-section">Talks</a>
+            <a href=".\index.html#publications-section">Publications</a>
+            <a href=".\index.html#preprints-section">Preprints</a>
+            <a href=".\index.html#students-section">Students</a>
+            <a href=".\index.html#teaching-section">Teaching</a>
+            <a href=".\index.html#contact-section">Contact</a>
             <a href=".\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
 
-            <a id="search-button" href=".\website\search_page.html">
-                <i class="fas fa-search"></i>
+            <a id="search-button" href=".\index.html">
+                <i class="fas fa-home"></i>
             </a>
 
             <!-- Ícone do Menu Hamburguer -->
