--- a/search_page.html
+++ b/search_page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Articles</title>
     <link rel="icon" href="../static/images/favicon.png" sizes="16x16" type="image/png">
-    <script type="module" src="js/search_page.js"></script>
+    <script type="module" src="website/js/search_page.js"></script>
 
     <!-- Include Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" 
@@ -49,20 +49,14 @@
         </nav>
     </header>
 
-    <header>
-        <h1>Articles</h1>
-    </header>
-
     <section>
-        <select id="json-select"> </select>
-        <input type="text" id="search-input" placeholder="Type to search...">
-    </section>
-
-    <section>
-        <!-- Div to display search results -->
+        <h1 class="white-text">Articles</h1>
+        <select id="json-select" class="grey-text"> </select>
+        <input type="text" id="search-input" placeholder="Type to search..." class="grey-text">
+        <!-- "Div to display search results -->
         <div id="search-results"></div>
     </section>
-
+    
     <div id="articleModal" class="modal">
         <div class="modal-content">
             <span id="closeModal" class="close">&times;</span>
