--- a/search_page.html
+++ b/search_page.html
@@ -27,23 +27,29 @@
         <!-- Navigation Bar with Anchors to Sections -->
         <nav>
             <a href=".\index.html" class="bold nav-permanent">Rodrigo S. Targino</a>
-
-            <a href=".\index.html#">Experience</a>
-            <a href=".\index.html#personal-info-section">Home</a>
-            <a href=".\index.html#talks-section">Talks</a>
-            <a href=".\index.html#publications-section">Publications</a>
-            <a href=".\index.html#preprints-section">Preprints</a>
-            <a href=".\index.html#students-section">Students</a>
-            <a href=".\index.html#teaching-section">Teaching</a>
-            <a href=".\index.html#contact-section">Contact</a>
-            <a href=".\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
-
-            <a id="search-button" href=".\index.html">
-                <i class="fas fa-home"></i>
-            </a>
+            
+            <a class="nav-options" href=".\index.html#personal-info-section">Home</a>
+            <a class="nav-options" href=".\index.html#">Experience</a>
+            <a class="nav-options" href=".\index.html#talks-section">Talks</a>
+            <a class="nav-options" href=".\index.html#publications-section">Publications</a>
+            <a class="nav-options" href=".\index.html#preprints-section">Preprints</a>
+            <a class="nav-options" href=".\index.html#students-section">Students</a>
+            <a class="nav-options" href=".\index.html#teaching-section">Teaching</a>
+            <a class="nav-options" href=".\index.html#contact-section">Contact</a>
+            <a class="nav-options" href=".\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
+            
+            <!-- Container para os botões -->
+            <div id="action-buttons">
+                <button id="theme-toggle-button" class="icon-button">
+                    <i class="fa fa-adjust"></i>
+                </button>
+                <a id="search-button" class="icon-button" href=".\index.html">
+                    <i class="fa fa-home"></i>
+                </a>
+            </div>
 
             <!-- Ícone do Menu Hamburguer -->
-            <a id="menu-toggle" href="javascript:void(0);">
+            <a class="menu-toggle" href="javascript:void(0);">
                 <i class="fas fa-bars"></i> <!-- Ícone do menu hamburguer -->
             </a>
         </nav>
