Add loading screen and update html strucutre

--- a/index.html
+++ b/index.html
@@ -151,17 +151,26 @@
                 </div>
             </section>
 
-            <!-- Professional Experience Section -->
+
             <section id="professional-experience-section">
-                <h2 class="regular grey-text">Professional Experience</h2>
-                <ul id="professional-experience-list"></ul>
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Professional Experience</h2>
+                </div>
+                <!-- Coluna do Conteúdo -->
+                <div class="section-content">
+                    <ul id="professional-experience-list"></ul>
+                </div>
             </section>
 
             <!-- Talks Section -->
             <section id="talks-section">
-                <h2 class="regular grey-text">Talks</h2>
-
-                <div id="talks-container">
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Talks</h2>
+                </div>
+                <!-- Coluna do Conteúdo -->
+                <div class="section-content">
                     <ul id="talks-list"></ul>
                     <br>
                     <a id="see-all-talks" href="search_page.html?type=talks" target="_blank">SEE ALL TALKS ></a>
@@ -170,9 +179,12 @@
 
             <!-- Publications Section -->
             <section id="publications-section">
-                <h2 class="regular grey-text">Publications</h2>
-
-                <div id="publications-container">
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Publications</h2>
+                </div>
+                <!-- Coluna do Conteúdo -->
+                <div class="section-content">
                     <ul id="publications-list"></ul>
                     <br>
                     <a id="see-all-publications" href="search_page.html?type=publications" target="_blank">SEE ALL PUBLICATIONS ></a>
@@ -181,35 +193,52 @@
 
             <!-- Preprints Section -->
             <section id="preprints-section">
-                <h2 class="regular grey-text">Preprints</h2>
-
-                <div id="preprints-container">
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Preprints</h2>
+                </div>
+                <!-- Coluna do Conteúdo -->
+                <div class="section-content">
                     <ul id="preprints-list"></ul>
                     <br>
                     <a id="see-all-preprints" href="search_page.html?type=preprints" target="_blank">SEE ALL PREPRINTS ></a>
+                </div>
             </section>
 
             <!-- Students Section -->
             <section id="students-section">
-                <h2 class="regular grey-text">Students</h2>
-                <div class="table-container">
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Students</h2>
+                </div>
+                <!-- Coluna do Conteúdo -->
+                <div class="section-content table-container">
                     <table id="students-table"></table>
                 </div>
             </section>
 
             <!-- Teaching Section -->
             <section id="teaching-section">
-                <h2 class="regular grey-text">Teaching</h2>
-                <div class="table-container">
-                    <table id="teaching-table"></table>
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Teaching</h2>
                 </div>
-                <p class="no-margin grey-text">(*) Second supervisor.</p>
+                <!-- Coluna do Conteúdo -->
+                <div class="section-content">
+                    <div class="table-container">
+                        <table id="teaching-table"></table>
+                    </div>
+                    <p class="no-margin grey-text">(*) Second supervisor.</p>
+                </div>
             </section>
 
             <!-- Contact Section -->
             <section id="contact-section">
-                <h2 class="regular grey-text">Contact</h2>
-
+                <!-- Coluna do Título -->
+                <div class="section-title">
+                    <h2>Contact</h2>
+                </div>
+                <!-- Coluna do Conteúdo -->
                 <div id="contact-container">
                     <p id="contact-email"></p>
                     <p id="contact-address"></p>
