--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
                 <a class="nav-options" href=".\static\author_data\RodrigoSTarginoCV.pdf">CV</a>
 
                 <!-- Container para os botões -->
-                <div id="action-buttons">
-                    <a id="theme-toggle-button" class="icon-button">
-                        <i class="fa fa-adjust"></i>
-                    </a>
-                </div>
+                <a id="theme-toggle-button" class="icon-button">
+                    <i class="fa fa-adjust"></i>
+                </a>
 
                 <!-- Ícone do Menu Hamburguer -->
                 <a class="menu-toggle" href="javascript:void(0);">
@@ -88,7 +86,7 @@
 
             <!-- Personal Information Section -->
             <section id="personal-info-section">
-                <div id="personal-info-left">
+                <div id="personal-info-left" class="section-title">
                     <div id="personal-picture-container">
                         <img id="personal-picture" src=".\static\images\profile_picture.jpg" alt="Photo of Rodrigo S. Targino">
                     </div>
@@ -130,7 +128,7 @@
                     </ul>
                 </div>
 
-                <div id="personal-info-right">
+                <div id="personal-info-right" class="section-content">
                     <div id="biography">
                         <h1 class="regular grey-text">Biography</h1>
                         <p id="biography-text"></p>
@@ -239,7 +237,7 @@
                     <h2>Contact</h2>
                 </div>
                 <!-- Coluna do Conteúdo -->
-                <div id="contact-container">
+                <div id="contact-container" class="section-content">
                     <p id="contact-email"></p>
                     <p id="contact-address"></p>
                     <div id="contact-map"></div>
