--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="..\static\author_data\RodrigoSTarginoCV.pdf">
+                            <a href=".\static\author_data\RodrigoSTarginoCV.pdf">
                                 <i class="ai ai-cv big-icon"></i>
                             </a>
                         </li>
